--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,17 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -25,5 +36,6 @@
     <modules>
         <module>hdfs-study</module>
         <module>MapReduce-study</module>
+        <module>concurrent-study</module>
     </modules>
 </project>
