--- a/flink-hive/pom.xml
+++ b/flink-hive/pom.xml
@@ -16,9 +16,24 @@
 
     <properties>
         <flink.version>1.10.0</flink.version>
-        <scala.binary.version>2.11</scala.binary.version>
+        <scala.binary.version>2.12</scala.binary.version>
     </properties>
 
+
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>http://central</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- Apache Flink dependencies -->
@@ -103,7 +118,7 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-exec</artifactId>
-            <version>2.3.4</version>
+            <version>2.3.0</version>
             <exclusions>
                 <exclusion>
                     <artifactId>datanucleus-core</artifactId>
@@ -211,6 +226,14 @@
             <artifactId>flink-connector-rabbitmq_2.12</artifactId>
             <version>1.9.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.hydromatic/eigenbase-properties -->
+        <dependency>
+            <groupId>net.hydromatic</groupId>
+            <artifactId>eigenbase-properties</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+
 
     </dependencies>
 
