--- a/logback-common/pom.xml
+++ b/logback-common/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.liangqinghai.study.kafka</groupId>
-    <artifactId>kafka</artifactId>
+    <artifactId>logback-common</artifactId>
 
     <dependencies>
 
@@ -36,13 +35,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-            <version>2.4.1</version>
         </dependency>
 
     </dependencies>
