--- a/pom.xml
+++ b/pom.xml
@@ -148,5 +148,6 @@
         <module>springboot-nutz-dao</module>
         <module>reactor-study</module>
         <module>springboot-web-flux</module>
+        <module>springboot-jwt</module>
     </modules>
 </project>
