--- a/pom.xml
+++ b/pom.xml
@@ -153,5 +153,6 @@
         <module>springboot-druid</module>
         <module>springboot-mybatis</module>
         <module>springboot-mybatisplus-crown</module>
+        <module>jsqlparser-study</module>
     </modules>
 </project>
