--- a/logback-common/pom.xml
+++ b/logback-common/pom.xml
@@ -37,6 +37,12 @@
             <version>${logback.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.danielwegener</groupId>
+            <artifactId>logback-kafka-appender</artifactId>
+            <version>0.2.0-RC2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
