--- a/springboot-mybatisplus-study/src/main/resources/application.yml
+++ b/springboot-mybatisplus-study/src/main/resources/application.yml
@@ -57,9 +57,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:p6spy:mysql://127.0.0.1:3306/c_study?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
-    username: root
-    password:
+#    url: jdbc:p6spy:mysql://127.0.0.1:3306/c_study?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
+#    username: root
+#    password:
     druid:
       initial-size: 10
       min-idle: 5
@@ -73,7 +73,7 @@ spring:
       test-on-return: false
       pool-prepared-statements: true
       max-pool-prepared-statement-per-connection-size: 20
-      filters: stat,wall,log4j
+#      filters: stat,wall,log4j
       connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 mybatis-plus:
@@ -87,3 +87,9 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
+
+custom:
+  free-maker:
+    author: Mr.Liang
+    keyword: study
+    description: desc
