--- a/hdfs-study/pom.xml
+++ b/hdfs-study/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>hive-exec</artifactId>
             <version>3.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-common</artifactId>
+            <version>2.2.3</version>
+        </dependency>
 
     </dependencies>
 
