--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -41,6 +41,11 @@
             <version>1.5.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
