--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
         <module>Java-Base</module>
         <module>rocksdb</module>
         <module>kafka</module>
-        <module>netty</module>
+<!--        <module>netty</module>-->
         <module>scala-study</module>
         <module>jni-study</module>
         <module>idempotent-study</module>
@@ -142,7 +142,7 @@
         <module>reactor-study</module>
         <module>springboot-web-flux</module>
         <module>springboot-jwt</module>
-        <module>grpc-study</module>
+<!--        <module>grpc-study</module>-->
         <module>springboot-druid</module>
         <module>springboot-mybatis</module>
         <module>springboot-mybatisplus-crown</module>
@@ -158,7 +158,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>central</id>
-            <url>http://gotoNexus</url>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>never</updatePolicy>
