--- a/springboot-jpa-querydsl/pom.xml
+++ b/springboot-jpa-querydsl/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
