--- a/springDataR2dbc/pom.xml
+++ b/springDataR2dbc/pom.xml
@@ -34,6 +34,11 @@
             <version>0.8.2.RELEASE</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.mariadb</groupId>-->
+<!--            <artifactId>r2dbc-mariadb</artifactId>-->
+<!--        </dependency>-->
+
         <!--        <dependency>-->
         <!--            <groupId>com.github.jasync-sql</groupId>-->
         <!--            <artifactId>jasync-mysql</artifactId>-->
@@ -84,7 +89,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.4.1</version>
+                <version>2.4.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
