--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.2.1</version>
+            <version>5.4.7</version>
         </dependency>
 
         <dependency>
@@ -158,6 +158,7 @@
         <module>springDataR2dbc</module>
         <module>webservice-study</module>
         <module>sqltoy-study</module>
+        <module>spring-security-oauth2-study</module>
     </modules>
 
     <pluginRepositories>
